fixed overflow-x issues on safari

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -16,6 +16,8 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 }
 html {
 	font-size: 100%;
+		overflow-x: hidden;
+
 }
 body {
 	background: black;
@@ -24,6 +26,7 @@ body {
 	text-align: center;
 	text-transform: uppercase;
 	font-size: 1rem;
+	overflow-x: hidden !important;
 }
 a {
 	padding-bottom: 2px;
@@ -345,7 +348,9 @@ top: 50%;
 .link {
 	font-size: 1rem;
 }
-
+section {
+	overflow-x: hidden!important;
+}
 section.content {
 	padding: 175px 0 125px 0;
 } 
